--- a/doc/source/_templates/sample.tmpl
+++ b/doc/source/_templates/sample.tmpl
@@ -14,3 +14,27 @@ List of Items
 {% for item in data['key2'] %}
 - {{item}}
 {% endfor %}
+
+Nested List Table
+~~~~~~~~~~~~~~~~~
+
+Rendering a table from a list of nested sequences using hard-coded
+headers.
+
+{{ make_list_table(
+    ['One', 'Two', 'Three'],
+    data['nested-list'],
+    title='Table from nested lists',
+    ) }}
+
+Mapping Series Table
+~~~~~~~~~~~~~~~~~~~~
+
+Rendering a table from a list of nested dictionaries using dynamic
+headers.
+
+{{ make_list_table_from_mappings(
+    [('One', 'cola'), ('Two', 'colb'), ('Three', 'colc')],
+    data['mapping-series'],
+    title='Table from series of mappings',
+    ) }}
