Add a little bit of documentation for XML

--- a/doc/source/_templates/xml-sample.tmpl
+++ b/doc/source/_templates/xml-sample.tmpl
@@ -17,6 +17,9 @@ List of Items
 
 XPath for Items
 ~~~~~~~~~~~~~~~
+
+See `XPath support <https://docs.python.org/3/library/xml.etree.elementtree.html#xpath-support>`_
+
 {% for item in data.findall(".//*[@special='yes']") %}
 - {{item.text}}
 {% endfor %}
