docs: improve docs for multiple data sources and load()
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/doc/source/_templates/inventory.tmpl
+++ b/doc/source/_templates/inventory.tmpl
@@ -1,5 +1,7 @@
 .. -*- mode: rst -*-
 
+{# The details about parts in inventory are kept in a separate data
+   file from the stock quantity. #}
 {% set parts = load('part-details.yaml') %}
 
 .. list-table:: What's in stock
